[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
chrono = "0.4.24"
redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
redis-graph = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
bb8 = "0.8.1"
bb8-redis = "0.13.1"
