[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
chrono = "0.4.26"
redis = { version = "0.23.0"  }
redis-graph = { version = "0.4.4", features = ['tokio-comp'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.11.0"
