[package]
name = "pokus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
redis = "0.22.1"
redis-graph = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
